--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.26",
+    "heic2any": "^0.0.4",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "react": "19.2.1",
